refact: use Stream.toList